Talha Mar 26 2012: Added Job Detailed History Part

--- a/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
+++ b/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
@@ -387,6 +387,12 @@
     <Compile Include="Common\PropertyPageAndWizard\AbstractWizardPagesNoRoot.cs" />
     <Compile Include="Common\PropertyPageAndWizard\IAbstractPropertyPagesNoRoot.cs" />
     <Compile Include="Common\PropertyPageAndWizard\IPropertyPageNoRoot.cs" />
+    <Compile Include="Forecasting\CopyToSkillCommand.cs" />
+    <Compile Include="Forecasting\CopyToSkillModel.cs" />
+    <Compile Include="Forecasting\CopyToSkillPresenter.cs" />
+    <Compile Include="Forecasting\DetailedJobHistoryPresenter.cs" />
+    <Compile Include="Forecasting\DetailedJobHistoryProvider.cs" />
+    <Compile Include="Forecasting\DetailedJobHistoryResultModel.cs" />
     <Compile Include="Forecasting\ExportPages\ChildSkillMappingModel.cs" />
     <Compile Include="Forecasting\ExportPages\DestinationSkillModel.cs" />
     <Compile Include="Forecasting\ExportPages\ExportAcrossBusinessUnitsSettings.cs" />
@@ -399,14 +405,27 @@
     <Compile Include="Forecasting\ExportPages\IExportAcrossBusinessUnitsSettingsProvider.cs" />
     <Compile Include="Forecasting\ExportPages\MultisiteSkillModel.cs" />
     <Compile Include="Forecasting\ExportPages\MultisiteSkillSelectionModel.cs" />
+    <Compile Include="Forecasting\ICopyToSkillCommand.cs" />
+    <Compile Include="Forecasting\ICopyToSkillView.cs" />
+    <Compile Include="Forecasting\IDetailedJobHistoryProvider.cs" />
+    <Compile Include="Forecasting\IDetailedJobHistoryView.cs" />
     <Compile Include="Forecasting\IJobHistoryProvider.cs" />
     <Compile Include="Forecasting\IJobHistoryView.cs" />
     <Compile Include="Forecasting\ImportForecast\Models\ImportForecastModel.cs" />
     <Compile Include="Forecasting\ImportForecast\Presenters\ImportForecastPresenter.cs" />
     <Compile Include="Forecasting\ImportForecast\Views\IImportForecast.cs" />
+    <Compile Include="Forecasting\IsPossibleTargetSkillForCopy.cs" />
     <Compile Include="Forecasting\JobHistoryPresenter.cs" />
     <Compile Include="Forecasting\JobHistoryProvider.cs" />
     <Compile Include="Forecasting\JobResultModel.cs" />
+    <Compile Include="Forecasting\OpenHourHelper.cs" />
+    <Compile Include="Forecasting\SkillPages\MultisiteSkillPropertiesPages.cs" />
+    <Compile Include="Forecasting\SkillPages\SkillGeneralPresenter.cs" />
+    <Compile Include="Forecasting\SkillPages\SkillPropertiesPages.cs" />
+    <Compile Include="Forecasting\SkillPages\SkillWizardPages.cs" />
+    <Compile Include="Forecasting\TextManager.cs" />
+    <Compile Include="Forecasting\WorkloadPages\WorkloadPropertiesPages.cs" />
+    <Compile Include="Forecasting\WorkloadPages\WorkloadWizardPages.cs" />
     <Compile Include="Grouping\Commands\AddGroupPageCommand.cs" />
     <Compile Include="Grouping\Commands\CommandProvider.cs" />
     <Compile Include="Grouping\Commands\RenameGroupPageCommand.cs" />
@@ -491,12 +510,6 @@
     <Compile Include="Meetings\Events\ShowExportMeetingClicked.cs" />
     <Compile Include="Meetings\Interfaces\IExportMeetingView.cs" />
     <Compile Include="Meetings\MeetingParticipantPermittedChecker.cs" />
-    <Compile Include="Forecasting\CopyToSkillCommand.cs" />
-    <Compile Include="Forecasting\CopyToSkillModel.cs" />
-    <Compile Include="Forecasting\CopyToSkillPresenter.cs" />
-    <Compile Include="Forecasting\ICopyToSkillCommand.cs" />
-    <Compile Include="Forecasting\ICopyToSkillView.cs" />
-    <Compile Include="Forecasting\IsPossibleTargetSkillForCopy.cs" />
     <Compile Include="Meetings\Overview\AppointmentFromMeetingCreator.cs" />
     <Compile Include="Meetings\Commands\AddMeetingCommand.cs" />
     <Compile Include="Meetings\Commands\CopyMeetingCommand.cs" />
@@ -697,7 +710,6 @@
     <Compile Include="FileImport\IModel.cs" />
     <Compile Include="FileImport\ImportFileDo.cs" />
     <Compile Include="FileImport\ImportFileDoCollection.cs" />
-    <Compile Include="Forecasting\SkillPages\SkillGeneralPresenter.cs" />
     <Compile Include="Intraday\IDayLayerViewModel.cs" />
     <Compile Include="Common\ISchedulingResultLoader.cs" />
     <Compile Include="Intraday\IManageAlarmSituationView.cs" />
@@ -987,7 +999,6 @@
     <Compile Include="Common\Rows\SkillStaffPeriodGridRowScheduler.cs" />
     <Compile Include="Converters\TimeSpanConverter.cs" />
     <Compile Include="Common\Chart\ChartSettingsManager.cs" />
-    <Compile Include="Forecasting\TextManager.cs" />
     <Compile Include="Intraday\DayLayerViewModel.cs" />
     <Compile Include="Intraday\IIntradayView.cs" />
     <Compile Include="Intraday\IntradayPresenter.cs" />
@@ -1070,7 +1081,6 @@
     <Compile Include="Scheduling\DateTimePeriodViewModel.cs" />
     <Compile Include="Scheduling\Gridlock.cs" />
     <Compile Include="Scheduling\GridlockManager.cs" />
-    <Compile Include="Forecasting\SkillPages\MultisiteSkillPropertiesPages.cs" />
     <Compile Include="Presentation\BusinessUnitListBoxPresenter.cs" />
     <Compile Include="Presentation\IEntityPresenter.cs" />
     <Compile Include="Presentation\IListBoxPresenter.cs" />
@@ -1101,11 +1111,6 @@
     <Compile Include="Common\DailyAssignmentList.cs" />
     <Compile Include="Common\GuiHelpers\ListBoxItem.cs" />
     <Compile Include="Common\PasteOptions.cs" />
-    <Compile Include="Forecasting\OpenHourHelper.cs" />
-    <Compile Include="Forecasting\SkillPages\SkillPropertiesPages.cs" />
-    <Compile Include="Forecasting\SkillPages\SkillWizardPages.cs" />
-    <Compile Include="Forecasting\WorkloadPages\WorkloadPropertiesPages.cs" />
-    <Compile Include="Forecasting\WorkloadPages\WorkloadWizardPages.cs" />
     <Compile Include="PeopleAdmin\IPersonRoleView.cs" />
     <Compile Include="PeopleAdmin\PersonGeneralModel.cs" />
     <Compile Include="Presentation\AuthorizationEntityListBoxPresenter.cs" />
