--- a/Infrastructure/Teleopti.Ccc.Infrastructure.csproj
+++ b/Infrastructure/Teleopti.Ccc.Infrastructure.csproj
@@ -287,6 +287,7 @@
     <Compile Include="Persisters\ScheduleScreenPersisterResult.cs" />
     <Compile Include="Persisters\ScheduleScreenRefresher.cs" />
     <Compile Include="Persisters\ScheduleScreenRetryingPersister.cs" />
+    <Compile Include="Repositories\DetailedJobResultRepository.cs" />
     <Compile Include="Repositories\IImportForecastRepository.cs" />
     <Compile Include="Repositories\ImportForecastRepository.cs" />
     <Compile Include="Repositories\PersonFinderReadOnlyRepository.cs" />
