more refactorings on import forecasts stuff.

--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -227,17 +227,16 @@
     <Compile Include="Forecasting\Export\SaveForecastToSkillCommand.cs" />
     <Compile Include="Forecasting\Export\SkillExportCombination.cs" />
     <Compile Include="Forecasting\Export\SkillExportSelection.cs" />
-    <Compile Include="Forecasting\ForecastsFile\CsvFileReader.cs" />
-    <Compile Include="Forecasting\ForecastsFile\CsvFileRow.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileDateTimeValidator.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileDoubleValueValidator.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileIntegerValueValidator.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileRow.cs" />
-    <Compile Include="Forecasting\ForecastsFile\ForecastsFileRowCreator.cs" />
+    <Compile Include="Forecasting\ForecastsFile\ForecastsFileConstants.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileSkillNameValidator.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileValidator.cs" />
     <Compile Include="Forecasting\ForecastsFile\ImportForecastsOptions.cs" />
     <Compile Include="Forecasting\Import\ForecastFile.cs" />
+    <Compile Include="Forecasting\Import\ForecastsFileContentProvider.cs" />
     <Compile Include="Forecasting\Import\IForecastFile.cs" />
     <Compile Include="Forecasting\IntervalLengthServiceLevelSpecification.cs" />
     <Compile Include="Forecasting\TimeDefinition.cs" />
