RestoreToLocal messagebroker now uses a specified folder
* Build using msbuild instead of VS
* Output in Database/Tools/Restore/output

--HG--
branch : Release 7.1.356

--- a/.hgignore
+++ b/.hgignore
@@ -54,3 +54,4 @@ Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.dll.C
 *[Tt]est.dll.[Cc]onfig
 *.ncov.bkp
 Teleopti.Ccc.Rta/Teleopti.Ccc.Rta.WebService/RtaWebService.log.1
+Database/Tools/Restore/output
