--- a/.hgignore
+++ b/.hgignore
@@ -54,5 +54,5 @@ Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.dll.C
 *[Tt]est.dll.[Cc]onfig
 *.ncov.bkp
 Teleopti.Ccc.Rta/Teleopti.Ccc.Rta.WebService/RtaWebService.log.1
-PBI 18157.sln
+*.sln
 Database/Tools/Restore/output
