Refactored analytics data setup to testcommon and made a analytics database test green using actual data!

--- a/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
+++ b/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
@@ -151,6 +151,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Foundation\SystemUserSpecificationTest.cs" />
+    <Compile Include="Helper\AnalyticsDatabaseTest.cs" />
     <Compile Include="Licensing\AgreementProviderTest.cs" />
     <Compile Include="Licensing\LicenseStatusRepositoriesTest.cs" />
     <Compile Include="Licensing\LicenseStatusUpdaterTest.cs" />
