Get new msgBroker into Azure

--- a/BuildArtifacts/RTAWeb.config
+++ b/BuildArtifacts/RTAWeb.config
@@ -24,7 +24,7 @@
 		</sectionGroup>
 	</configSections>
 	<appSettings>
-    <!--WISEMETA: value="[SQL_AUTH_STRING];Initial Catalog=[DB_MESSAGING];Application Name=Teleopti.RTA.WebService"-->
+    <!--WISEMETA: value="[MESSAGE_BROKER_RTA]"-->
     <add key="MessageBroker" value="Data Source=.;Integrated Security=True;Persist Security Info=False;Initial Catalog=TeleoptiAnalytics;Application Name=Teleopti.RTA.WebService"/>
     <!--WISEMETA: value="[SQL_AUTH_STRING];Initial Catalog=[DB_ANALYTICS];Application Name=Teleopti.RTA.WebService"-->
     <add key ="DataStore" value="Data Source=.;Integrated Security=True;Persist Security Info=False;Initial Catalog=TeleoptiAnalytics;Application Name=Teleopti.RTA.WebService"/>
