--- a/BuildArtifacts/SDKWeb.config
+++ b/BuildArtifacts/SDKWeb.config
@@ -71,7 +71,7 @@
 		<!--WISEMETA: value="[MATRIX_WEB_SITE_URL]"-->
 		<add key="MatrixWebSiteUrl" value="http://DummyHostname/TeleoptiCCC/Analytics/"/>
 		<add key="CustomerWebSSOUrl" value="http://customer.teleopti.com/elogin.aspx"/>
-      <!--WISEMETA: value="[SQL_AUTH_STRING];Initial Catalog=[DB_MESSAGING];Application Name=Teleopti.Ccc.MessageBrokerClient"-->
+      <!--WISEMETA: value="[MESSAGE_BROKER_SDK]"-->
 		<add key="MessageBroker" value="Data Source=.;Integrated Security=True;Persist Security Info=False;Initial Catalog=TeleoptiAnalytics;Application Name=Teleopti.Ccc.Sdk.Host"/>
       <add key="HelpUrlOnline" value="http://onlinehelp.teleopti.com/ccc/dev/"/>
       <add key="HelpPrefixOnline" value="f01:"/>
