--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Common\PersonsInOrganizationProvider.cs" />
     <Compile Include="Common\ScenarioProvider.cs" />
     <Compile Include="Forecasting\Export\IJobResultFeedback.cs" />
+    <Compile Include="Forecasting\Export\ImportForecastToSkillCommand.cs" />
     <Compile Include="Forecasting\Export\IMultisiteSkillForExport.cs" />
     <Compile Include="Forecasting\Export\IOpenAndSplitSkillCommand.cs" />
     <Compile Include="Forecasting\Export\ISaveForecastToSkillCommand.cs" />
@@ -230,7 +231,7 @@
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileDateTimeValidator.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileDoubleValueValidator.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileIntegerValueValidator.cs" />
-    <Compile Include="Forecasting\ForecastsFile\ForecastsFileRow.cs" />
+    <Compile Include="Forecasting\ForecastsFile\ForecastsRow.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileConstants.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileSkillNameValidator.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileValidator.cs" />
