add a test for ad hoc stuff.

--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBusTest/Teleopti.Ccc.Sdk.ServiceBusTest.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBusTest/Teleopti.Ccc.Sdk.ServiceBusTest.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Forecast\ImportForecastsFileToSkillConsumerResolveTest.cs" />
     <Compile Include="Forecast\ImportForecastsToSkillTest.cs" />
     <Compile Include="Forecast\OpenAndSplitTargetSkillTest.cs" />
+    <Compile Include="Forecast\SendImportForecastBusMessageTest.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IntegrationTest.cs" />
     <Compile Include="NewAbsenceRequestConsumerTest.cs" />
