Fixed Code by robin and added IOC pattern

--- a/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
+++ b/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
@@ -326,9 +326,7 @@
     <Compile Include="Forecasting\CopyToSkillCommand.cs" />
     <Compile Include="Forecasting\CopyToSkillModel.cs" />
     <Compile Include="Forecasting\CopyToSkillPresenter.cs" />
-    <Compile Include="Forecasting\DetailedJobHistoryPresenter.cs" />
-    <Compile Include="Forecasting\DetailedJobHistoryProvider.cs" />
-    <Compile Include="Forecasting\DetailedJobHistoryResultModel.cs" />
+    <Compile Include="Forecasting\JobResultDetailModel.cs" />
     <Compile Include="Forecasting\ExportPages\ChildSkillMappingModel.cs" />
     <Compile Include="Forecasting\ExportPages\DestinationSkillModel.cs" />
     <Compile Include="Forecasting\ExportPages\ExportAcrossBusinessUnitsSettings.cs" />
@@ -343,16 +341,14 @@
     <Compile Include="Forecasting\ExportPages\MultisiteSkillSelectionModel.cs" />
     <Compile Include="Forecasting\ICopyToSkillCommand.cs" />
     <Compile Include="Forecasting\ICopyToSkillView.cs" />
-    <Compile Include="Forecasting\IDetailedJobHistoryProvider.cs" />
-    <Compile Include="Forecasting\IDetailedJobHistoryView.cs" />
-    <Compile Include="Forecasting\IJobHistoryProvider.cs" />
+    <Compile Include="Forecasting\IJobResultProvider.cs" />
     <Compile Include="Forecasting\IJobHistoryView.cs" />
     <Compile Include="Forecasting\ImportForecast\Models\ImportForecastModel.cs" />
     <Compile Include="Forecasting\ImportForecast\Presenters\ImportForecastPresenter.cs" />
     <Compile Include="Forecasting\ImportForecast\Views\IImportForecastView.cs" />
     <Compile Include="Forecasting\IsPossibleTargetSkillForCopy.cs" />
     <Compile Include="Forecasting\JobHistoryPresenter.cs" />
-    <Compile Include="Forecasting\JobHistoryProvider.cs" />
+    <Compile Include="Forecasting\JobResultProvider.cs" />
     <Compile Include="Forecasting\JobResultModel.cs" />
     <Compile Include="Forecasting\OpenHourHelper.cs" />
     <Compile Include="Forecasting\SkillPages\MultisiteSkillPropertiesPages.cs" />
