--- a/Infrastructure/Teleopti.Ccc.Infrastructure.csproj
+++ b/Infrastructure/Teleopti.Ccc.Infrastructure.csproj
@@ -225,7 +225,7 @@
     <Compile Include="Persisters\ScheduleScreenRefresher.cs" />
     <Compile Include="Persisters\ScheduleScreenRetryingPersister.cs" />
     <Compile Include="Repositories\ApplicationRolePersonRepository.cs" />
-    <Compile Include="Repositories\DetailedJobResultRepository.cs" />
+    <Compile Include="Repositories\IJobResultRepository.cs" />
     <Compile Include="Repositories\LicenseStatusRepository.cs" />
     <Compile Include="Repositories\IImportForecastsRepository.cs" />
     <Compile Include="Repositories\ImportForecastsRepository.cs" />
