Some fixes after system test, changing to linklabels instead of buttons, error handling on lost connection in showform for example

--- a/Teleopti.Ccc.SmartClientPortal/Teleopti.Ccc.SmartClientPortal.Shell/App.config
+++ b/Teleopti.Ccc.SmartClientPortal/Teleopti.Ccc.SmartClientPortal.Shell/App.config
@@ -135,9 +135,9 @@
 		</client>
 	</system.serviceModel>
 	<appSettings>
-		<add key="GetConfigFromWebService" value="false" />
-    
-		<add key="nhibConfPath" value="C:\temp\" />
+    <add key="GetConfigFromWebService" value="false"/>
+    <add key="ShowMem" value="true"/>
+    <add key="nhibConfPath" value="C:\temp" />
 		<!--Keep this uncomment. Raptor will search your application directory after nhib files-->
 
 		<add key="ClientSettingsProvider.ServiceUri" value="" />
@@ -158,6 +158,5 @@
 		<add key="HelpDivider" value="_"/>
 		<!--WISEMETA: value="[CONTEXT_HELP_Suffix]"-->
 		<add key="HelpSuffix" value=".html"/>
-		<add key="showMem" value="true"/>
 	</appSettings>
 </configuration>
