--- a/Win/Teleopti.Ccc.Win.csproj
+++ b/Win/Teleopti.Ccc.Win.csproj
@@ -644,6 +644,7 @@
     <Compile Include="Forecasting\Forms\ImportForecast\ImportForecastView.Designer.cs">
       <DependentUpon>ImportForecastView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forecasting\Forms\ImportForecast\SendCommandToSdk.cs" />
     <Compile Include="Forecasting\Forms\JobHistory\JobHistoryDetailedView.cs">
       <SubType>Form</SubType>
     </Compile>
