--- a/Teleopti.Ccc.Web.Broker/Web.config
+++ b/Teleopti.Ccc.Web.Broker/Web.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
   <appSettings />
   <connectionStrings />
   <system.web>
@@ -31,4 +34,21 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <log4net>
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="c:\temp\WebBroker.log" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="500KB" />
+      <staticLogFileName value="true" />
+      <appendToFile value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c %m%n" />
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="RollingLogFileAppender" />
+    </root>
+  </log4net>
 </configuration>
