Feedback is now loaded async

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
@@ -117,7 +117,8 @@
     <Compile Include="Core\Portal\PortalViewModelFactoryStudentAvailabilityTest.cs" />
     <Compile Include="Core\Portal\PortalViewModelFactoryTeamScheduleTest.cs" />
     <Compile Include="Core\Portal\PortalViewModelFactoryRequestsTest.cs" />
-    <Compile Include="Core\Preference\DataProvider\PreferenceFeedbackProviderTest.cs" />
+    <Compile Include="Areas\MyTime\Core\Preference\DataProvider\PreferenceFeedbackProviderTest.cs" />
+    <Compile Include="Areas\MyTime\Core\Preference\Mapping\PreferenceDayFeedbackViewModelMappingTest.cs" />
     <Compile Include="Core\RequestContext\CultureProviderTest.cs" />
     <Compile Include="Core\RequestContext\CurrentDataSourceProviderTest.cs" />
     <Compile Include="Core\RequestContext\CurrentPrincipalProviderTest.cs" />
@@ -179,13 +180,13 @@
     <Compile Include="Core\Portal\PermissionProviderTest.cs" />
     <Compile Include="Core\Portal\PortalHtmlHelperTest.cs" />
     <Compile Include="Core\Portal\PortalViewModelFactoryTest.cs" />
-    <Compile Include="Core\Preference\DataProvider\PreferenceOptionsProviderTest.cs" />
-    <Compile Include="Core\Preference\DataProvider\PreferencePersisterTest.cs" />
-    <Compile Include="Core\Preference\Mapping\PreferenceDayInputResultMappingTest.cs" />
-    <Compile Include="Core\Preference\Mapping\PreferenceDomainDataMappingTest.cs" />
-    <Compile Include="Core\Preference\Mapping\PreferenceViewModelMappingTest.cs" />
-    <Compile Include="Core\Preference\Mapping\PreferenceDayInputMappingTest.cs" />
-    <Compile Include="Core\Preference\ViewModelFactory\PreferenceViewModelFactoryTest.cs" />
+    <Compile Include="Areas\MyTime\Core\Preference\DataProvider\PreferenceOptionsProviderTest.cs" />
+    <Compile Include="Areas\MyTime\Core\Preference\DataProvider\PreferencePersisterTest.cs" />
+    <Compile Include="Areas\MyTime\Core\Preference\Mapping\PreferenceDayInputResultMappingTest.cs" />
+    <Compile Include="Areas\MyTime\Core\Preference\Mapping\PreferenceDomainDataMappingTest.cs" />
+    <Compile Include="Areas\MyTime\Core\Preference\Mapping\PreferenceViewModelMappingTest.cs" />
+    <Compile Include="Areas\MyTime\Core\Preference\Mapping\PreferenceDayInputMappingTest.cs" />
+    <Compile Include="Areas\MyTime\Core\Preference\ViewModelFactory\PreferenceViewModelFactoryTest.cs" />
     <Compile Include="Core\Requests\DataProvider\PersonRequestProviderTest.cs" />
     <Compile Include="Core\UserTimeZoneTest.cs" />
     <Compile Include="Core\Requests\DataProvider\TextRequestPersisterTest.cs" />
