--- a/Teleopti.Ccc.SmartClientPortal/Teleopti.Ccc.SmartClientPortal.Shell/App.config
+++ b/Teleopti.Ccc.SmartClientPortal/Teleopti.Ccc.SmartClientPortal.Shell/App.config
@@ -4,7 +4,13 @@
 	</configSections>
 
 	<log4net>
-		<appender name="file" type="log4net.Appender.RollingFileAppender">
+    <appender name="trace" type="log4net.Appender.TraceAppender, log4net">
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p - %m%n" />
+      </layout>
+    </appender>
+    
+		<!--<appender name="file" type="log4net.Appender.RollingFileAppender">
 			<file value="TeleoptiErrorLog.txt" />
 			<appendToFile value="true" />
 			<rollingStyle value="Size" />
@@ -14,14 +20,16 @@
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
 			</layout>
-		</appender>
-		<root>
-			<level value="ERROR" />
-			<appender-ref ref="file" />
-		</root>
-		<!--<logger name="Teleopti">
-			<level value="INFO" />
-		</logger>-->
+		</appender>-->
+    <root>
+      <!--priority value can be set to ALL|DEBUG|INFO|WARN|ERROR|FATAL-->
+      <level value="WARN" />
+      <appender-ref ref="trace" />
+    </root>
+    <!--Skriv ut Teleopti-grejjer - INFO-->
+    <logger name="Teleopti">
+      <level value="ALL" />
+    </logger>
 	</log4net>
 
   <system.serviceModel>
