Changed the signature handling for license status.

--- a/Teleopti.Ccc.Obfuscated/Teleopti.Ccc.Obfuscated.csproj
+++ b/Teleopti.Ccc.Obfuscated/Teleopti.Ccc.Obfuscated.csproj
@@ -127,6 +127,7 @@
     <Compile Include="ResourceCalculation\WorkShiftCalculationResultHolder.cs" />
     <Compile Include="ResourceCalculation\WorkShiftCalculatorsManager.cs" />
     <Compile Include="ResourceCalculation\WorkShiftFinderService.cs" />
+    <Compile Include="Security\LicenseStatusConstants.cs" />
     <Compile Include="Security\SuperUser.cs" />
   </ItemGroup>
   <ItemGroup>
