Bugfix: 18694 [Arabic names mirrored in pdf exports when user has western culture]
--HG--
branch : Release 7.1.356

--- a/Teleopti.Ccc.WinCodeTest/Teleopti.Ccc.WinCodeTest.csproj
+++ b/Teleopti.Ccc.WinCodeTest/Teleopti.Ccc.WinCodeTest.csproj
@@ -579,6 +579,7 @@
     <Compile Include="Scheduler\PersistConflictTest.cs" />
     <Compile Include="Scheduler\NotSkillGroupSpecificationTest.cs" />
     <Compile Include="Scheduler\PinnedSkillHelperTests.cs" />
+    <Compile Include="Scheduler\Reporting\CCCPdfStringFormatTest.cs" />
     <Compile Include="Scheduler\Reporting\PdfFontManagerTest.cs" />
     <Compile Include="Scheduler\Reporting\ScheduledTimeVersusTargetTimeReportDataTest.cs" />
     <Compile Include="Scheduler\Reporting\ScheduleReportDialogGraphicalModelTest.cs" />
