Async loading of feedback now aborts feedback loading when a preference is added or deleted for that day

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Web.config
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Web.config
@@ -81,7 +81,7 @@
       </namespaces>
     </pages>
     <globalization culture="auto" uiCulture="auto" />
-		<customErrors mode="Off" defaultRedirect="~/content/error/error.htm">
+		<customErrors mode="On" defaultRedirect="~/content/error/error.htm">
 			<error statusCode="404" redirect="~/content/error/404.htm"/>
 		</customErrors>
     <httpHandlers>
